<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="true_Button">True</string>
    <string name="false_Button">False</string>
    <string name="next_Button">Next</string>
    <string name="previuos_Button">Prev</string>

    <string name="correct_toast">Good job. Answer is correct !</string>
    <string name="incorrect_toast">too bad, Answer is incorrect</string>

    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>

</resources>
