<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    >



    <TextView
        android:id="@+id/q_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_australia"
        android:background="@android:color/holo_purple"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/t_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_Button"
            android:layout_marginRight="1dp"
            >


        </Button>

        <Button
            android:id="@+id/f_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_Button">

        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

      <!--  <Button
            android:id="@+id/Prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previuos_Button"
            android:layout_marginTop="2dp"
            android:layout_marginRight="1dp"

        </Button>  -->

        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="54dp"
            android:layout_height="50dp"
            android:src="@drawable/leftbutton"
            android:contentDescription="@string/previuos_Button"
            >

        </ImageButton>

      <!--   <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_Button"
        android:layout_marginTop="2dp"
        >

        </Button> -->

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="54dp"
            android:layout_height="50dp"
            android:src="@drawable/rightbutton"
            android:contentDescription="@string/next_Button"
            >

        </ImageButton>

    </LinearLayout>

</LinearLayout>